glx/testdata/invalid/custom-vocab-edge-cases/sources/source-custom.glx
sources:
  source-custom:
    title: "Custom Source"


